lektion 6 (forms & identity)

--- a/lektion-6/WebApp_Forms/WebApp_Forms.csproj
+++ b/lektion-6/WebApp_Forms/WebApp_Forms.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WebApp_Forms.Shared\WebApp_Forms.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
