--- a/lektion-6/WebApp_Forms.Shared/WebApp_Forms.Shared.csproj
+++ b/lektion-6/WebApp_Forms.Shared/WebApp_Forms.Shared.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\Entities\" />
-    <Folder Include="Contexts\" />
+    <Folder Include="Data\" />
     <Folder Include="Services\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
