--- a/lektion-11/WebApi/appsettings.json
+++ b/lektion-11/WebApi/appsettings.json
@@ -8,6 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Identity": "Server=tcp:prog22-sqlserver.database.windows.net,1433;Initial Catalog=identity-database;Persist Security Info=False;User ID=SqlAdmin;Password=BytMig123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-  }
-  
+  },
+  "TokenValidation": {
+    "Issuer": "WebApi",
+    "Audience": "AuthenticatedUsers",
+    "SecretKey": "582d128a-d1ae-43f9-a521-51712709f178"
+  },
+  "ApiKey": "755d128a-d2ae-43f9-a521-41712709f1b5"
+
 }
